[gd_scene load_steps=12 format=2]

[ext_resource path="res://media/OceanBG4.png" type="Texture" id=1]
[ext_resource path="res://media/OceanBG1.png" type="Texture" id=2]
[ext_resource path="res://media/OceanBG2.png" type="Texture" id=3]
[ext_resource path="res://media/OceanBG3.png" type="Texture" id=4]
[ext_resource path="res://scripts/ParallaxBackground.gd" type="Script" id=5]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=6]
[ext_resource path="res://scripts/SpawnPosition.gd" type="Script" id=7]
[ext_resource path="res://scripts/World.gd" type="Script" id=8]
[ext_resource path="res://scripts/Score.gd" type="Script" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 41, 10 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 262 )

[node name="World" type="Node"]
script = ExtResource( 8 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
offset = Vector2( 256, 256 )
transform = Transform2D( 1, 0, 0, 1, 256, 256 )
script = ExtResource( 5 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 512, 0 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
texture = ExtResource( 2 )

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 512, 0 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer2"]
texture = ExtResource( 3 )

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 512, 0 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer3"]
texture = ExtResource( 4 )

[node name="ParallaxLayer4" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 512, 0 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer4"]
texture = ExtResource( 1 )

[node name="Player" parent="." instance=ExtResource( 6 )]
position = Vector2( 38, 253 )
collision_mask = 3

[node name="ShootPoint" parent="Player" index="2"]
visible = false

[node name="Boundaries" type="StaticBody2D" parent="."]
position = Vector2( 41, 32 )
collision_mask = 15

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boundaries"]
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Boundaries"]
position = Vector2( 3.8147e-06, 473 )
shape = SubResource( 1 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Boundaries"]
position = Vector2( 999, 224 )
shape = SubResource( 2 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Boundaries"]
position = Vector2( -129, 224 )
shape = SubResource( 2 )

[node name="SpawnPosition" type="Position2D" parent="."]
position = Vector2( 605, 253 )
script = ExtResource( 7 )

[node name="Timer" type="Timer" parent="SpawnPosition"]
wait_time = 0.5
autostart = true

[node name="Timer2" type="Timer" parent="SpawnPosition"]
wait_time = 35.0
autostart = true

[node name="GUI" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="GUI"]
margin_left = 215.0
margin_top = 4.0
margin_right = 283.0
margin_bottom = 24.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "0"
align = 1
valign = 1
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="Label" parent="GUI"]
margin_left = 397.0
margin_top = 6.0
margin_right = 503.0
margin_bottom = 20.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Press ESC to exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Restart" type="Label" parent="GUI"]
visible = false
margin_left = 202.0
margin_top = 237.0
margin_right = 312.0
margin_bottom = 257.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Press R to restart"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="SpawnPosition/Timer" to="SpawnPosition" method="_on_Timer_timeout"]
[connection signal="timeout" from="SpawnPosition/Timer2" to="SpawnPosition" method="_on_Timer2_timeout"]

[editable path="Player"]
